--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
 
 [dependencies]
-rand = "0.5.1"
+rand = "0.5.4"
+png = "0.12.0"
 
 [profile.dev]
 opt-level = 3
