--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
 [dependencies]
 rand = "0.5.4"
 png = "0.12.0"
+euclid = "0.19.0"
 
 [profile.dev]
 opt-level = 3
