--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
 rand = "0.5.5"
 png = "0.12.0"
 euclid = "0.19.0"
+clap = "2.32.0"
 
 [profile.dev]
 opt-level = 3
