--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "raytracer"
 version = "0.1.0"
 authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
+#edition = "2018"
 
 [dependencies]
 rand = "0.5.5"
