--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
+cargo-features = ["edition"]
+
 [package]
 name = "raytracer"
 version = "0.1.0"
 authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
-#edition = "2018"
+edition = "2018"
 
 [dependencies]
 rand = "0.5.5"
