--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,14 @@
 name = "raytracer"
 version = "0.1.0"
 authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
-#edition = "2018"
+edition = "2018"
 
 [dependencies]
-rand = "0.5.5"
-png = "0.12.0"
-euclid = "0.19.0"
-clap = "2.32.0"
+rand = "*"
+png = "*"
+euclid = "*"
+clap = "*"
+chrono = "0.4.19"
 
 [profile.dev]
 opt-level = 3
