--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ png = "*"
 euclid = "*"
 clap = "*"
 chrono = "0.4.19"
+crossbeam-channel = "0.5.0"
+crossbeam-utils = "0.8.3"
+num_cpus = "1.13.0"
 
 
 [profile.dev]
